--- a/RollingPaper/RollingPaper/Controllers/PaperSettingsViewController.xib
+++ b/RollingPaper/RollingPaper/Controllers/PaperSettingsViewController.xib
@@ -99,6 +99,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<string key="NSFrame">{{0, 548}, {320, 216}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -354,7 +355,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 					<object class="IBUIButton" id="281916264">
 						<reference key="NSNextResponder" ref="588354170"/>
 						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{266, 32}, {19, 22}}</string>
+						<string key="NSFrame">{{27, 32}, {258, 22}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="819561185"/>
@@ -362,7 +363,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentHorizontalAlignment">2</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<reference key="IBUIHighlightedTitleColor" ref="443926784"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -587,7 +588,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<string key="NSFrame">{{21, 405}, {270, 35}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="805316050"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -595,6 +596,85 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">orange_button.png</string>
 						</object>
+					</object>
+					<object class="IBUIButton" id="805316050">
+						<reference key="NSNextResponder" ref="588354170"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{21, 412}, {270, 37}}</string>
+						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="656156109"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">0.0</double>
+						<double key="IBUIContentEdgeInsets.left">5</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
+						<string key="IBUINormalTitle">          함께만들 친구 추가</string>
+						<reference key="IBUIHighlightedTitleColor" ref="443926784"/>
+						<object class="NSColor" key="IBUINormalTitleColor" id="326516198">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAAA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="1008977576"/>
+						<object class="NSCustomResource" key="IBUINormalImage" id="634733118">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">userlist_plus.png</string>
+						</object>
+						<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="369254850">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">userlist_bottom.png</string>
+						</object>
+						<reference key="IBUIFontDescription" ref="889008518"/>
+						<reference key="IBUIFont" ref="825816084"/>
+					</object>
+					<object class="IBUITableView" id="656156109">
+						<reference key="NSNextResponder" ref="588354170"/>
+						<int key="NSvFlags">288</int>
+						<string key="NSFrame">{{21, 448}, {270, 37}}</string>
+						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="815712611"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIAlwaysBounceVertical">YES</bool>
+						<int key="IBUISeparatorStyle">1</int>
+						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
+						<float key="IBUIRowHeight">44</float>
+						<float key="IBUISectionHeaderHeight">22</float>
+						<float key="IBUISectionFooterHeight">22</float>
+					</object>
+					<object class="IBUIButton" id="815712611">
+						<reference key="NSNextResponder" ref="588354170"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{21, 485}, {270, 37}}</string>
+						<reference key="NSSuperview" ref="588354170"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="68749440"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">0.0</double>
+						<double key="IBUIContentEdgeInsets.left">5</double>
+						<double key="IBUIContentEdgeInsets.right">0.0</double>
+						<string key="IBUINormalTitle">          친구목록 전체보기</string>
+						<reference key="IBUIHighlightedTitleColor" ref="443926784"/>
+						<reference key="IBUINormalTitleColor" ref="326516198"/>
+						<reference key="IBUINormalTitleShadowColor" ref="1008977576"/>
+						<reference key="IBUINormalImage" ref="634733118"/>
+						<reference key="IBUINormalBackgroundImage" ref="369254850"/>
+						<reference key="IBUIFontDescription" ref="889008518"/>
+						<reference key="IBUIFont" ref="825816084"/>
 					</object>
 					<object class="IBUIView" id="68749440">
 						<reference key="NSNextResponder" ref="588354170"/>
@@ -637,12 +717,35 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 									<string key="NSResourceName">paper_cell_bg_shadow.png</string>
 								</object>
 							</object>
+							<object class="IBUIButton" id="636497240">
+								<reference key="NSNextResponder" ref="68749440"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{20, 10}, {274, 112}}</string>
+								<reference key="NSSuperview" ref="68749440"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="890679878"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<reference key="IBUIBackgroundColor" ref="608764614"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIHighlightedTitleColor" ref="443926784"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="1008977576"/>
+								<reference key="IBUIFontDescription" ref="889008518"/>
+								<reference key="IBUIFont" ref="825816084"/>
+							</object>
 							<object class="IBUIButton" id="847340093">
 								<reference key="NSNextResponder" ref="68749440"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{11, 133}, {288, 38}}</string>
 								<reference key="NSSuperview" ref="68749440"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -669,27 +772,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="636497240">
-								<reference key="NSNextResponder" ref="68749440"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 10}, {274, 112}}</string>
-								<reference key="NSSuperview" ref="68749440"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="890679878"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<reference key="IBUIHighlightedTitleColor" ref="443926784"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="1008977576"/>
-								<reference key="IBUIFontDescription" ref="889008518"/>
-								<reference key="IBUIFont" ref="825816084"/>
-							</object>
 						</array>
 						<string key="NSFrame">{{0, 530}, {311, 180}}</string>
 						<reference key="NSSuperview" ref="588354170"/>
@@ -715,81 +797,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 							<int key="IBUIType">0</int>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-					</object>
-					<object class="IBUIButton" id="805316050">
-						<reference key="NSNextResponder" ref="588354170"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{21, 412}, {270, 37}}</string>
-						<reference key="NSSuperview" ref="588354170"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="815712611"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<double key="IBUIContentEdgeInsets.top">0.0</double>
-						<double key="IBUIContentEdgeInsets.bottom">0.0</double>
-						<double key="IBUIContentEdgeInsets.left">5</double>
-						<double key="IBUIContentEdgeInsets.right">0.0</double>
-						<string key="IBUINormalTitle">          함께만들 친구 추가</string>
-						<reference key="IBUIHighlightedTitleColor" ref="443926784"/>
-						<object class="NSColor" key="IBUINormalTitleColor" id="326516198">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
-						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="1008977576"/>
-						<object class="NSCustomResource" key="IBUINormalImage" id="634733118">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">userlist_plus.png</string>
-						</object>
-						<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="369254850">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">userlist_bottom.png</string>
-						</object>
-						<reference key="IBUIFontDescription" ref="889008518"/>
-						<reference key="IBUIFont" ref="825816084"/>
-					</object>
-					<object class="IBUITableView" id="656156109">
-						<reference key="NSNextResponder" ref="588354170"/>
-						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{21, 448}, {270, 37}}</string>
-						<reference key="NSSuperview" ref="588354170"/>
-						<reference key="NSWindow"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<reference key="IBUIBackgroundColor" ref="443926784"/>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<bool key="IBUIAlwaysBounceVertical">YES</bool>
-						<int key="IBUISeparatorStyle">1</int>
-						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
-						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
-						<float key="IBUIRowHeight">44</float>
-						<float key="IBUISectionHeaderHeight">22</float>
-						<float key="IBUISectionFooterHeight">22</float>
-					</object>
-					<object class="IBUIButton" id="815712611">
-						<reference key="NSNextResponder" ref="588354170"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{21, 485}, {270, 37}}</string>
-						<reference key="NSSuperview" ref="588354170"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="68749440"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<double key="IBUIContentEdgeInsets.top">0.0</double>
-						<double key="IBUIContentEdgeInsets.bottom">0.0</double>
-						<double key="IBUIContentEdgeInsets.left">5</double>
-						<double key="IBUIContentEdgeInsets.right">0.0</double>
-						<string key="IBUINormalTitle">          친구목록 전체보기</string>
-						<reference key="IBUIHighlightedTitleColor" ref="443926784"/>
-						<reference key="IBUINormalTitleColor" ref="326516198"/>
-						<reference key="IBUINormalTitleShadowColor" ref="1008977576"/>
-						<reference key="IBUINormalImage" ref="634733118"/>
-						<reference key="IBUINormalBackgroundImage" ref="369254850"/>
-						<reference key="IBUIFontDescription" ref="889008518"/>
-						<reference key="IBUIFont" ref="825816084"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{311, 710}</string>
@@ -931,6 +938,22 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<reference key="destination" ref="815712611"/>
 					</object>
 					<int key="connectionID">167</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">recipientPickerButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="281916264"/>
+					</object>
+					<int key="connectionID">171</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">backgroundPickerButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="636497240"/>
+					</object>
+					<int key="connectionID">172</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1286,7 +1309,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">170</int>
+			<int key="maxID">172</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1344,6 +1367,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="backgroundImageView">UIImageView</string>
+						<string key="backgroundPickerButton">UIButton</string>
 						<string key="bottomContainer">UIView</string>
 						<string key="containerView">UIView</string>
 						<string key="datePicker">UIDatePicker</string>
@@ -1354,6 +1378,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<string key="receiveDateField">UITextField</string>
 						<string key="receiveTimeField">UITextField</string>
 						<string key="recipientNameField">UITextField</string>
+						<string key="recipientPickerButton">UIButton</string>
 						<string key="scrollView">UIScrollView</string>
 						<string key="showParticipantsButton">UIButton</string>
 						<string key="timePicker">UIDatePicker</string>
@@ -1363,6 +1388,10 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<object class="IBToOneOutletInfo" key="backgroundImageView">
 							<string key="name">backgroundImageView</string>
 							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="backgroundPickerButton">
+							<string key="name">backgroundPickerButton</string>
+							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="bottomContainer">
 							<string key="name">bottomContainer</string>
@@ -1403,6 +1432,10 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<object class="IBToOneOutletInfo" key="recipientNameField">
 							<string key="name">recipientNameField</string>
 							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="recipientPickerButton">
+							<string key="name">recipientPickerButton</string>
+							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="scrollView">
 							<string key="name">scrollView</string>
